--- a/Aula 4/index.html
+++ b/Aula 4/index.html
@@ -8,15 +8,15 @@
 <!--link - link externo css-->    <!--herf - chamando documento utilizado-->    <!--media - -->
 </head>
 <body>
-    <b><p>Cascading Style Sheets</p></b> 
-    <ol type="a">
-        <b><li>O seletor</li>
-        <li>Bloco de declaração</li></b>
+    <b><p class="Titulo">Cãochão</p></b>
+    <ol id="seletor" type="a">
+        <!--<b><li>O seletor</li>
+        <li>Bloco de declaração</li>-->
     <ol> <!--ol - ordena por número-->
         
     <ul> <!--ul - ordena por bolinha-->
-        <b><li>O seletor</li> <!--li - lista-->
-        <li>Bloco de declaração</li><b></b>
+        <!--<li>O seletor</li> li - lista-->
+        <!--<li>Bloco de declaração</li></b>-->
     <ul>
 </body>
 </html>
